[package]
name = "lasercube"
version = "0.1.0"
authors = ["Anatol Ulrich <anatol.ulrich@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
bytemuck = {version = "1.5.1", features = ["derive"]}
log = "0.4"
pretty_env_logger = "0.4"
rusb = "0.8.0"
thiserror = "1.0.24"
